# Internal_Doc_Assistant

./: .gitignore  DELIVERABLES.md  EVAL.md  README.md  pyproject.toml
docs/handbook/: access.md  expenses.md  glossary.md  incidents.md  onboarding.md  prompt_injection.md
evals/: eval_set.jsonl
internal_docs_assistant/: __init__.py  __main__.py  agent.py  eval.py  mcp_server.py  model.py  rag.py
